--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "discord-bot-luisfun",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
+    "fix": "biome check --write . && tsc --noEmit",
+    "fix:unsafe": "biome check --write-unsafe . && tsc --noEmit",
+    "register": "tsc && node --env-file=.env dist/register.js",
     "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
-    "start": "wrangler dev",
-    "test": "vitest",
-    "cf-typegen": "wrangler types"
+    "log": "wrangler tail"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.4.5",
+    "@biomejs/biome": "1.8.3",
     "@cloudflare/workers-types": "^4.20240620.0",
-    "typescript": "^5.4.5",
-    "vitest": "1.5.0",
-    "wrangler": "^3.60.3"
+    "discord-api-types": "^0.37.91",
+    "typescript": "^5.5.3",
+    "wrangler": "^3.62.0"
+  },
+  "dependencies": {
+    "discord-hono": "^0.7.2"
   }
 }
